# ufo_npo

./: README.md  pyproject.toml  research.ipynb
features/: capm_factors.csv  imoex_quart.csv  rates_q.csv
