[tool.poetry]
name = "ufo-npo"
version = "0.1.0"
description = ""
authors = ["Rinat Sharafetdinov <rsharafetdinov@samokat.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^1.26.4"
lightgbm = "^4.3.0"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
catboost = "^1.2.3"
flask = "^3.0.3"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
pyngrok = "^7.1.6"
pydantic-settings = "^2.2.1"
ipywidgets = "^8.1.2"


[[tool.poetry.source]]
name = "nexus_samokat"
url = "https://nexus.samokat.io/repository/nexus-pypi-group/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
